tests/fixtures/invalid/min_bytes_bool.py
# Cannot call min() with Bytes, Bool
x = min(b"hello", True)
